--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -65,7 +65,7 @@
     }
 
     .item {
-      & > .item-body {
+      & > .item-body:first-child {
         // If no image exists (no .item-left) but it's set to be displayed, move content in, so that there's a space instead of an image.
         padding-left: @ku-thumbnails-size;
       }
