--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -65,9 +65,11 @@
     }
 
     .item {
-      & > .item-body:first-child {
-        // If no image exists (no .item-left) but it's set to be displayed, move content in, so that there's a space instead of an image.
-        padding-left: @ku-thumbnails-size;
+      & > .item-body {
+        &:first-child {
+          // If no image exists (no .item-left) but it's set to be displayed, move content in, so that there's a space instead of an image.
+          padding-left: @ku-thumbnails-size;
+        }
       }
     }
   }
