--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -13,6 +13,10 @@
     &+ .item {
       border-top: 1px solid @gray;
 
+      &:first-child {
+        padding-top: 3px;
+      }
+
       &:last-child {
         border-bottom: 1px solid @gray;
       }
