--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -346,7 +346,7 @@ nav[aria-label="Pager"] {
 }
 // Float images right on single column spans:
 
-#gridsidebar .single-column .column1,
+.right-side .single-column .column1,
 .one-one-two-column .column1,
 .one-one-two-column .column2,
 .one-three-column .column1,
@@ -382,7 +382,7 @@ nav[aria-label="Pager"] {
 // Float images left on multiple column spans
 
 .double-column [class*=column],
-.gridcontent:not(#gridsidebar) .single-column .column1,
+.gridcontent:not(.right-side) .single-column .column1,
 .one-one-two-column .column3,
 .one-three-column .column2,
 .one-two-column .column2,
