--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -99,6 +99,7 @@
     <li><a href="#images-shapes">Image shapes</a></li>
   </ul>
 </li>
+<li><a href="#css-effects">KU CSS effects</a></li>
 <li>
   <a href="#helper-classes">Helper classes</a>
   <ul class="nav">
