--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -22,7 +22,11 @@
     width: 100%;
     border: 0;
   }
+  &+ .embed-responsive {
+    margin-top: @grid-gutter-height;
+  }
 }
+
 // Modifier class for 16:9 aspect ratio
 
 .embed-responsive-16by9 {
