--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -305,13 +305,13 @@ nav[aria-label="Pager"] {
 // Search news forms
 
 .search-news {
-  padding: 5px 15px !important;
+  padding: 5px 15px;
 
   form {
     display: flex;
-    @media only screen and (min-width: @screen-sm-max) {
-      height: 30px;
-    }
+    // @media only screen and (min-width: @screen-sm-max) {
+    //   height: 30px;
+    // }
   }
 
   .search-news-query {
