Flexible boxes img

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1047,6 +1047,11 @@
 
   .GridForside .double-column {
     .gridbox.with-img {
+      &.size1 {
+        .box2 img {
+          height: 138%;
+        }
+      }
       &.size3 {
         .box2 img {
           height: 150%;
@@ -1124,6 +1129,11 @@
 
   .GridForside .double-column {
     .gridbox.with-img {
+      &.size1 {
+        .box2 img {
+          height: 138%;
+        }
+      }
       &.size3 {
         .box2 img {
           height: 150%;
