--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1185,6 +1185,13 @@
     .box2 img {
       height: 100%;
     }
+    &.size1 {
+      .box2 img {
+        height: auto;
+        width: auto;
+        min-width: 100%;
+      }
+    }
   }
 }
 @media all and (min-width: @screen-xs) {
@@ -1192,6 +1199,13 @@
     .gridbox.with-img {
       .box2 img {
         height: 100%;
+      }
+      &.size1 {
+        .box2 img {
+          height: auto;
+          width: auto;
+          min-width: 100%;
+        }
       }
     }
   }
