--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -41,7 +41,7 @@ figure {
   display: table;
   table-layout: fixed;
   max-width: 100%;
-  clear: both;
+  // clear: both;
 
   &.image {
     // Makes figcaption fit image width
