--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -1,8 +1,8 @@
 /* Styling for ku.dk front page only */
-
 .topbar-logo {
   display: none !important;
 }
+
 .ku-branding-text {
   background-image: url("https://bootstrap.secure.ku.dk/img/ku_header_2_lin_dk.svg");
   background-position: left bottom 36%;
@@ -47,12 +47,16 @@ html:lang(en) .ku-branding-text {
   }
 }
 
-.col-sm-7.ku-branding-line .ku-branding-text {
-  width: 68%;
-  left: 100px;
-  background-position: left bottom 40%
+/* Testing */
+@media all and (min-width: 992px) {
+  .col-sm-7.ku-branding-line .ku-branding-text {
+    width: 68%;
+    left: 100px;
+    background-position: left bottom 40%
+  }
 }
 
+/* Testing */
 .breadcrumbs, .local-footer {
   display: none;
 }
