--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -112,12 +112,13 @@
 
 .search-area {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: flex-end;
 
   .global-search {
     width: 100%;
     padding-left: 0;
+    margin-bottom: 16px;
   }
 
   .global-search-options-toggle {
