--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -15,7 +15,7 @@
 .gridbox {
   width: 100%;
   position: relative;
-  font-size: @font-size-base;
+  font-size: @font-size-body-desktop;
   line-height: @line-height-small;
   border-radius: 2px;
   display: flex;
@@ -226,9 +226,11 @@
       letter-spacing: 0.4px;
     }
 
-    .text {
-      font-size: 13px;
-    }
+    // .text {
+    //   @media (min-width: @screen-md) {
+    //     font-size: @font-size-body-desktop;
+    //   }
+    // }
   }
 
   .box2 {
