--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -23,7 +23,7 @@
     @media (max-width: @screen-sm) {
       width: 50px;
       bottom: -20px;
-      left: @grid-gutter-by-half;
+      left: 5px;
     }
   }
 
