--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -48,11 +48,16 @@ html:lang(en) .ku-branding-text {
 }
 
 /* Testing */
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .col-sm-7.ku-branding-line .ku-branding-text {
+    width: 70%;
+  }
+}
 @media all and (min-width: 992px) {
   .col-sm-7.ku-branding-line .ku-branding-text {
     width: 68%;
     left: 100px;
-    background-position: left bottom 26%
+    background-position: left bottom 26%;
   }
 }
 
