--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -34,7 +34,7 @@
     @media (min-width: @screen-sm) {
       left: 100px;
     }
-    bottom: 17px;
+    bottom: 13px;
     letter-spacing: 0.936px;
     padding-right: 10px;
 
@@ -43,11 +43,11 @@
     }
 
     .ku-branding-text-major {
-      font-size: 14px;
+      font-size: 15px;
       line-height: 1.2;
-      @media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
-        font-size: 15px;
-      }
+      // @media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
+      //   font-size: 15px;
+      // }
       @media (min-width: @screen-md) {
         font-size: @ku-branding-text-font-size;
       }
