--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -119,6 +119,9 @@
     width: 100%;
     padding-left: 0;
     margin-bottom: 22px;
+    @media (min-width: @screen-sm) and (max-width: @screen-sm-max){
+      margin-bottom: 18px;
+    }
   }
 
   .global-search-options-toggle {
