--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -51,22 +51,23 @@ html:lang(en) .ku-branding-text {
 @media all and (min-width: 768px) and (max-width: 991px) {
   .col-sm-7.ku-branding-line .ku-branding-text {
     width: 70%;
+    background-position: left bottom 33%;
   }
 }
 @media all and (min-width: 992px) {
   .col-sm-7.ku-branding-line .ku-branding-text {
     width: 68%;
     left: 100px;
-    background-position: left bottom 26%;
+    background-position: left bottom 33%;
   }
 }
-
 /* Testing */
+
 .breadcrumbs, .local-footer {
   display: none;
 }
 
-.media-list .eventteaser {
+.media-list .eventteaser, .item .item-teaser {
   /* Hide teaser text on front page */
   display: none;
 }
