--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -116,9 +116,9 @@
     width: 100%;
     padding-left: 0;
     margin-bottom: 22px;
-    @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
-      margin-bottom: 17px;
-    }
+    // @media (min-width: @screen-md) {
+    //   margin-bottom: 17px;
+    // }
   }
 
   .global-search-options-toggle {
