--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -116,9 +116,6 @@
     width: 100%;
     padding-left: 0;
     margin-bottom: 22px;
-    // @media (min-width: @screen-md) {
-    //   margin-bottom: 17px;
-    // }
   }
 
   .global-search-options-toggle {
@@ -153,7 +150,7 @@
 
 .global-search {
   .btn .caret {
-    margin-left: 5px; //KU
+    margin-left: 5px;
     color: #bbb;
   }
   // Can we delete this?
