--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -225,7 +225,6 @@
       font-weight: 700;
       letter-spacing: 0.4px;
     }
-
     // .text {
     //   @media (min-width: @screen-md) {
     //     font-size: @font-size-body-desktop;
@@ -292,20 +291,31 @@
       display: none;
     }
   }
-  // Videos
-  // &.with-iframe {
-  //   background: @ku-gray;
-  //   color: initial!important;
-  //
-  //   &::before {
-  //     display: none;
-  //   }
-  //
-  //   .header {
-  //     border-right: 5px solid transparent;
-  //     color: @gray-dark;
-  //   }
-  // }
+
+  &.with-quote {
+    // With quote:
+    pointer-events: none;
+
+    img {
+      float: left;
+    }
+
+    .text {
+      display: block;
+      margin-top: 5px;
+      padding: 10px;
+    }
+
+    .quote-bold {
+      font-weight: bold;
+      display: block;
+      margin-top: 4px;
+    }
+
+    &::before {
+      display: none;
+    }
+  }
   // Boxes with the title at the top
   &.text-top {
     .box1 {
@@ -1187,6 +1197,7 @@
     .box2 img {
       height: 100%;
     }
+
     &.size1 {
       .box2 img {
         height: auto;
@@ -1202,6 +1213,7 @@
       .box2 img {
         height: 100%;
       }
+
       &.size1 {
         .box2 img {
           height: auto;
