Removing underline on pseudo element

--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -1,4 +1,4 @@
-/* Styling for ku.dk front page only. NEL */
+/* Styling for ku.dk front page only. */
 .topbar-logo {
   display: none !important;
 }
