--- a/less/navbar.less
+++ b/less/navbar.less
@@ -887,6 +887,7 @@
         content: "\e252";
         font-family: 'Glyphicons Halflings';
         color: @ku-search-icons;
+        display: inline-block;
         font-size: 8px;
         position: absolute;
         top: 50%;
