--- a/less/variables.less
+++ b/less/variables.less
@@ -26,7 +26,7 @@
 @white-color:            #fff;
 
 @ku-light-grey:          #606060;
-@ku-search-icons:        #b6b6b6;
+@ku-search-icons:        @gray-666;
 @ku-news-gray:           #4a4949;
 @ku-footer-icon-bg:      #757575;
 @ku-footer-icon-size:    28px;
