--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -56,9 +56,9 @@ html:lang(en) .ku-branding-text {
 }
 @media all and (min-width: 992px) {
   .col-sm-7.ku-branding-line .ku-branding-text {
-    width: 68%;
+    width: 66%;
     left: 100px;
-    background-position: left bottom 33%;
+    background-position: left bottom 20px;
   }
 }
 /* Testing */
