--- a/less/navbar.less
+++ b/less/navbar.less
@@ -175,8 +175,8 @@
 
 .container,
 .container-fluid {
-  > .navbar-collapse,
-  > .navbar-header {
+  > .navbar-header,
+  > .navbar-collapse {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -307,8 +307,8 @@
       border: 0;
       box-shadow: none;
 
-      .dropdown-header,
-      > li > a {
+      > li > a,
+      .dropdown-header {
         padding: 5px 15px 5px 25px;
       }
 
@@ -679,29 +679,29 @@
       // KU language switcher icons
       &.dansk,
       &.english {
-        display: inline-block;
-        background-repeat: no-repeat;
+        &::after {
+          content: "";
+          width: 19px;
+          height: 13px;
+          background-size: cover;
+          background-repeat: no-repeat;
+          top: 9px;
+          right: -16px;
+          position: absolute;
+          display: inline-block;
+        }
       }
 
       &.english {
         &::after {
-          content: "";
-            width: 19px;
-            height: 13px;
-            background-image: transparent url("https://bootstrap.secure.ku.dk/img/flag-uk.gif");
-            background-size: cover;
-            background-repeat: no-repeat;
-            top: 10px;
-            right: 5px;
-            position: absolute;
-            display: inline-block;
+          background: transparent url("https://bootstrap.secure.ku.dk/img/flag-uk.gif");
         }
       }
 
       &.dansk {
-        width: 71px;
-        background-image: url("https://bootstrap.secure.ku.dk/img/flag-dk.gif");
-        background-position: right 9px;
+        &::after {
+          background: transparent url("https://bootstrap.secure.ku.dk/img/flag-dk.gif");
+        }
       }
     }
 
@@ -880,6 +880,7 @@
           font-size: 12px;
         }
       }
+
       &.global-search-submit {
         .border-right-radius(@border-radius-base)
       }
