--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -10,7 +10,6 @@
       // fix for IE 8-10 since svgs are disproportionately sized
       width: 100% \9;
     }
-    height: @ku-branding-box-height;
     width: 61px;
     z-index: 10;
     position: relative;
@@ -24,7 +23,7 @@
   }
 
   .ku-branding-text {
-    max-height: @ku-branding-box-height;
+    max-height: 63px;
     position: absolute;
     left: 80px;
     bottom: 13px;
