--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -10,6 +10,7 @@
       // fix for IE 8-10 since svgs are disproportionately sized
       width: 100% \9;
     }
+    height: 83px;
     width: 61px;
     z-index: 10;
     position: relative;
