--- a/less/navbar.less
+++ b/less/navbar.less
@@ -791,7 +791,7 @@
         }
       }
     }
-    @media (min-width: @screen-sm-min) {
+    @media (min-width: @screen-sm) {
       > li {
         + li {
           &:before {
@@ -804,11 +804,6 @@
             width: 1px;
             background: @white-color;
           }
-        }
-
-        > a {
-          color: @navbar-inverse-link-color;
-          //padding: @padding-xs-horizontal 6px @padding-xs-horizontal 7px;
         }
       }
     }
