Flexible boxes color change

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -89,19 +89,19 @@
 
     .header {
       background: fade(@white-color, 90%);
-      color: @ku-gridbox-text;
+      color: @gray-dark;
     }
 
     &.text-top {
       .header {
         background: @white-color;
-        color: @ku-gridbox-text;
+        color: @gray-dark;
       }
     }
 
     &.outlined {
       border: 1px solid @gray-dark;
-      color: @ku-gridbox-text;
+      color: @gray-dark;
 
       &:hover {
         background: @white-color-hover;
@@ -116,14 +116,14 @@
 
     &.full {
       background: @white-color;
-      color: @ku-gridbox-text;
+      color: @gray-dark;
 
       .header {
-        color: @ku-gridbox-text;
+        color: @gray-dark;
       }
 
       &::before {
-        color: @ku-gridbox-text;
+        color: @gray-dark;
       }
 
       &:hover {
@@ -142,11 +142,11 @@
     }
 
     &::before {
-      color: @ku-gridbox-text;
+      color: @gray-dark;
     }
 
     .text {
-      color: @ku-gridbox-text;
+      color: @gray-dark;
     }
   }
 
