--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -7,6 +7,15 @@ h2 {
     border-bottom: 1px solid @ku-red;
   }
 }
+
+// Special colors for studier.ku.dk
+.soeg-optagelse {
+  background: #bf1e6f !important;
+  &:hover {
+    background: #ae1b65 !important;
+  }
+}
+
 .gridbox {
   &.faculty_color {
     background: @ku-red;
