--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -127,9 +127,9 @@ h2 code, h3 code, h4 code {
   overflow: visible;
 }
 
-/* [data-example-id="img-with-captions"], [data-example-id="img-with-captions-aligned"] {
+[data-example-id="img-with-captions"], [data-example-id="img-with-captions-aligned"] {
   overflow: hidden;
-} */
+}
 
 /*
  * Fancy skip link
