--- a/less/type.less
+++ b/less/type.less
@@ -348,7 +348,12 @@ dd {
 // Misc
 // -------------------------
 // Abbreviations and acronyms
-abbr[title],// Add data-* attribute to help out our tooltip plugin, per https://github.com/twbs/bootstrap/issues/5257
+abbr[title] {
+  text-decoration: none;
+  border-bottom: 0;
+}
+
+// Add data-* attribute to help out our tooltip plugin, per https://github.com/twbs/bootstrap/issues/5257
 
 abbr[data-original-title] {
   cursor: help;
