--- a/less/variables.less
+++ b/less/variables.less
@@ -868,7 +868,7 @@
 @panel-body-padding:          10px;
 @panel-heading-padding:       6px 10px;
 // KU specific
-@panel-bokstop-heading-padding: 0 0 8px 0;
+@panel-bokstop-heading-padding: 0 0 8px;
 @panel-footer-padding:        6px 10px;
 @panel-border-radius:         @border-radius-base;
 
