--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -734,7 +734,7 @@
     }
   }
 }
-@media all and (min-width: @screen-xs) and (max-width: @screen-sm-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+@media all and (min-width: @screen-xs) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   // IE11 only
    .FullWidthFrontpage {
      .double-column {
