Updated default colors

--- a/less/variables.less
+++ b/less/variables.less
@@ -143,9 +143,9 @@
 @ku-entry-border:       #e8e8e8;
 
 @brand-primary:         darken(#7ea5a8, 6.5%);
-@brand-success:         #85ae33;
-@brand-info:            #7ea5a8;
-@brand-warning:         #e57002;
+@brand-success:         #617e25;
+@brand-info:            #577d7F;
+@brand-warning:         #bb5b02;
 @brand-danger:          #7b161a;
 
 // KU thumbnaiuls size
