--- a/less/mixins/alerts.less
+++ b/less/mixins/alerts.less
@@ -8,7 +8,7 @@
   hr {
     border-top-color: darken(@border, 5%);
   }
-  .alert-link {
+  a, .alert-link {
     color: darken(@text-color, 10%);
   }
 }
