--- a/less/alerts.less
+++ b/less/alerts.less
@@ -24,6 +24,10 @@
     font-weight: @alert-link-font-weight;
   }
 
+  a {
+    text-decoration: overline;
+  }
+
   // Improve alignment and spacing of inner content
   > p,
   > ul {
