--- a/less/type.less
+++ b/less/type.less
@@ -86,7 +86,7 @@ h1 {
   @media (max-width: @screen-xs-max) {
     margin-top: 20px;
   }
-  margin-top: 5px;
+  margin-top: 0;
   font-weight: 400;
 }
 
