--- a/less/variables.less
+++ b/less/variables.less
@@ -61,7 +61,7 @@
 @gridbox4: 81px; // .size4
 @gridbox5: 55px; // .size5
 // KU colors
-@ku-gridbox-text: @gray-444;
+@ku-gridbox-text: @text-color;
 @brown: #625757;
 @brown-hover: darken(@brown, 5%);
 @blue: #39808e;
@@ -74,7 +74,7 @@
 @ku-darkgray-hover: darken(@ku-darkgray, 5%);
 @ku-darkblue: #243858;
 @ku-darkblue-hover: darken(@ku-darkblue, 5%);
-@white-color-hover: darken(@white-color, 5%);
+@white-color-hover: darken(@white-color, 3%);
 
 // Faculty sub colors
 //Science
