Revert one box color

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -389,7 +389,7 @@
   }
   // Height 298px
   &.size1 {
-    background: @ku-gray;
+    background: @gray-lighter;
 
     &.with-img {
       .box1 {
