--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -440,7 +440,7 @@
     }
 
     &:hover {
-      background: @ku-gray-hover;
+      background: darken(@gray-lighter, 5%);
     }
   }
   // Height 185px
