--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -52,7 +52,7 @@
 
       &.with-img {
         &:hover {
-          background: @ku-gray-hover;
+          background: @gray-lighter;
         }
       }
     }
@@ -104,7 +104,7 @@
       color: @gray-dark;
 
       &:hover {
-        background: @white-color-hover;
+        background: @gray-lighter;
       }
 
       &.with-img {
